--- a/css/form.css
+++ b/css/form.css
@@ -155,7 +155,7 @@ select {
 
 .submitButton {
   border: none;
-  border: 1px solid #f5f5f5;
+  border: 1px solid #707070;
   margin-right: 30px;
 }
 
@@ -211,4 +211,22 @@ select {
     flex-direction: column-reverse;
     align-items: flex-start;
   }
+}
+
+.submitButton:hover {
+  background-color: #82a70c;
+  text-decoration: none;
+  color: #f5f5f5;
+}
+
+.cancelButton:hover {
+  background-color: #707070;
+  text-decoration: none;
+  color: #f5f5f5;
+}
+
+.resetButton:hover {
+  background-color: #707070;
+  text-decoration: none;
+  color: #f5f5f5;
 }
