--- a/css/form.css
+++ b/css/form.css
@@ -230,3 +230,10 @@ select {
   text-decoration: none;
   color: #f5f5f5;
 }
+
+error-output {
+  margin-left: 10px;
+  font-size: 12px;
+  font-style: italic;
+  color: red;
+}
